--- a/Resources/Private/Partials/Item/Owl.html
+++ b/Resources/Private/Partials/Item/Owl.html
@@ -6,15 +6,38 @@
         <div>
 
             <f:if condition="{item.foregroundMedia.0}">
-                <f:image image="{item.foregroundMedia.0}" maxWidth="300" />
+                <f:image image="{item.foregroundMedia.0}" maxWidth="300" class="img-fluid mb-4"  />
             </f:if>
 
         </div>
 
     </f:section>
 
-    <f:section name="Card">
+    <f:section name="Cards">
 
+
+        <div class="item" data-itemno="{iteration.index}">
+
+            <div class="card">
+
+                <f:if condition="{item.foregroundMedia.0}">
+                    <f:image image="{item.foregroundMedia.0}" maxWidth="300" class="card-img-top"  />
+                </f:if>
+
+                <div class="card-body">
+
+                    <f:link.typolink parameter="{item.data.link}">
+                        <h5 class="card-title">{item.data.title}</h5>
+                    </f:link.typolink>
+
+                    <f:format.html>{item.data.description}</f:format.html>
+
+                </div>
+
+            </div>
+
+
+        </div>
 
 
     </f:section>
