Bugfixes and changes

--- a/Resources/Private/Partials/Owl.html
+++ b/Resources/Private/Partials/Owl.html
@@ -17,7 +17,7 @@
         <wsslider:pageRenderer.addJsFooterInlineCode name="wsslider-{data.uid}">
 
             jQuery(document).ready(function() <f:format.raw>{</f:format.raw>
-            jQuery('#wsslider-{data.uid} .owl-carousel').owlCarousel({sliderSettings.json -> f:format.raw()});
+                jQuery('#wsslider-{data.uid} .owl-carousel').owlCarousel({sliderSettings.jsonParameters -> f:format.raw()});
             });
 
         </wsslider:pageRenderer.addJsFooterInlineCode>
