--- a/Resources/Public/CSS/Flexslider/flexslider.css
+++ b/Resources/Public/CSS/Flexslider/flexslider.css
@@ -12,8 +12,8 @@
 
 @font-face {
   font-family: 'flexslider-icon';
-  src: url('../Fonts/flexslider-icon.eot');
-  src: url('../Fonts/flexslider-icon.eot?#iefix') format('embedded-opentype'), url('../Fonts/flexslider-icon.woff') format('woff'), url('../Fonts/flexslider-icon.ttf') format('truetype'), url('../Fonts/flexslider-icon.svg#flexslider-icon') format('svg');
+  src: url('../../Fonts/Flexslider/flexslider-icon.eot');
+  src: url('../../Fonts/Flexslider/flexslider-icon.eot?#iefix') format('embedded-opentype'), url('../../Fonts/Flexslider/flexslider-icon.woff') format('woff'), url('../../Fonts/Flexslider/flexslider-icon.ttf') format('truetype'), url('../../Fonts/Flexslider/flexslider-icon.svg#flexslider-icon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
