--- a/Resources/Private/Partials/Item/Owl.html
+++ b/Resources/Private/Partials/Item/Owl.html
@@ -15,30 +15,7 @@
 
     <f:section name="Cards">
 
-
-        <div class="item" data-itemno="{iteration.index}">
-
-            <div class="card">
-
-                <f:if condition="{item.foregroundMedia.0}">
-                    <f:image image="{item.foregroundMedia.0}" maxWidth="300" class="card-img-top"  />
-                </f:if>
-
-                <div class="card-body">
-
-                    <f:link.typolink parameter="{item.data.link}">
-                        <h5 class="card-title">{item.data.title}</h5>
-                    </f:link.typolink>
-
-                    <f:format.html>{item.data.description}</f:format.html>
-
-                </div>
-
-            </div>
-
-
-        </div>
-
+        <f:render partial="Item/Layout/Card" arguments="{_all}" />
 
     </f:section>
 
