--- a/Resources/Private/Partials/Owl.html
+++ b/Resources/Private/Partials/Owl.html
@@ -5,7 +5,7 @@
     <f:section name="Default">
 
         <div id="wsslider-{data.uid}" class=" owl-theme">
-
+            <div class="owl-dots d-none d-md-flex"></div>
             <div class="owl-carousel">
                 <f:for each="{items}" as="item" iteration="iterator">
                     <f:render partial="Item/Owl" section="{sliderSettings.layout}"
@@ -16,8 +16,6 @@
 
 
         <wsslider:addStartJavaScriptCode functionName="owlCarousel" useJQuery="true" selector="#wsslider-{data.uid} .owl-carousel" name="wsslider-{data.uid}" defaultParameters="{sliderSettings.parameters}" />
-
-
 
     </f:section>
 
