fix for bootstrap

--- a/Resources/Private/Partials/Item/Bootstrap.html
+++ b/Resources/Private/Partials/Item/Bootstrap.html
@@ -3,7 +3,7 @@
 
     <f:section name="Default">
 
-            <div class="carousel-item carousel-item-{item.data.style_class}">
+            <div class="carousel-item carousel-item-{item.data.style_class}{f:if(condition:iterator.isFirst,then:' active')}">
                 <f:if condition="{item.foregroundMedia.0}">
 
                     <f:image image="{item.foregroundMedia.0}" maxWidth="600" />
