Removed width restriction in images.

--- a/Resources/Private/Partials/Item/Layout/Card.html
+++ b/Resources/Private/Partials/Item/Layout/Card.html
@@ -7,7 +7,7 @@
         <div class="card">
 
             <f:if condition="{item.foregroundMedia.0}">
-                <f:image image="{item.foregroundMedia.0}" maxWidth="300" class="card-img-top"/>
+                <f:image image="{item.foregroundMedia.0}" class="card-img-top"/>
             </f:if>
 
             <div class="card-body">
