--- a/Resources/Private/Partials/Item/Bootstrap.html
+++ b/Resources/Private/Partials/Item/Bootstrap.html
@@ -6,7 +6,7 @@
             <div class="carousel-item carousel-item-{item.data.style_class}{f:if(condition:iterator.isFirst,then:' active')}">
                 <f:if condition="{item.foregroundMedia.0}">
 
-                    <f:image image="{item.foregroundMedia.0}" maxWidth="600" />
+                    <f:image image="{item.foregroundMedia.0}" />
 
                 </f:if>
                 <div class="caption-wrapper caption-align-{item.text_position}">
