--- a/Resources/Private/Partials/Item/Flexslider.html
+++ b/Resources/Private/Partials/Item/Flexslider.html
@@ -6,7 +6,7 @@
             <li class="slidercontent wsflexslider-{item.data.style_class}">
                 <f:if condition="{item.foregroundMedia.0}">
 
-                    <f:image image="{item.foregroundMedia.0}" maxWidth="600" />
+                    <f:image image="{item.foregroundMedia.0}" />
 
                 </f:if>
                 <div class="caption-wrapper caption-align-{item.text_position}">
