--- a/Resources/Private/Partials/Item/Slick.html
+++ b/Resources/Private/Partials/Item/Slick.html
@@ -6,7 +6,7 @@
         <div>
 
             <f:if condition="{item.foregroundMedia.0}">
-                <f:image image="{item.foregroundMedia.0}" maxWidth="300" class="img-fluid mb-4"  />
+                <f:image image="{item.foregroundMedia.0}" class="img-fluid mb-4"  />
             </f:if>
 
         </div>
