--- a/Resources/Private/Partials/Owl.html
+++ b/Resources/Private/Partials/Owl.html
@@ -1,22 +1,23 @@
-<div xmlns="http://www.w3.org/1999/xhtml" lang="en"
-     xmlns:f="http://typo3.org/ns/fluid/ViewHelpers"
-     xmlns:wsslider="http://typo3.org/ns/WapplerSystems/WsSlider/ViewHelpers">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en"
+      xmlns:f="http://typo3.org/ns/fluid/ViewHelpers"
+      xmlns:wsslider="http://typo3.org/ns/WapplerSystems/WsSlider/ViewHelpers"
+      data-namespace-typo3-fluid="true">
 
-    <f:section name="Default">
+<f:section name="Default">
 
-        <div id="wsslider-{data.uid}" class=" owl-theme">
-            <div class="owl-dots d-none d-md-flex"></div>
-            <div class="owl-carousel">
-                <f:for each="{items}" as="item" iteration="iterator">
-                    <f:render partial="Item/Owl" section="{sliderSettings.layout}"
-                              arguments="{item: item, settings: settings, iterator:iterator}"/>
-                </f:for>
-            </div>
+    <div id="wsslider-{data.uid}" class=" owl-theme">
+        <div class="owl-dots d-none d-md-flex"></div>
+        <div class="owl-carousel">
+            <f:for each="{items}" as="item" iteration="iterator">
+                <f:render partial="Item/Owl" section="{sliderSettings.layout}"
+                          arguments="{item: item, settings: settings, iterator:iterator}"/>
+            </f:for>
         </div>
+    </div>
 
 
-        <wsslider:addStartJavaScriptCode functionName="owlCarousel" useJQuery="true" selector="#wsslider-{data.uid} .owl-carousel" name="wsslider-{data.uid}" defaultParameters="{sliderSettings.parameters}" />
+    <wsslider:addStartJavaScriptCode functionName="owlCarousel" useJQuery="true" selector="#wsslider-{data.uid} .owl-carousel" name="wsslider-{data.uid}" defaultParameters="{sliderSettings.parameters}"/>
 
-    </f:section>
+</f:section>
 
-</div>
+</html>
