--- a/Resources/Private/Templates/Slider.html
+++ b/Resources/Private/Templates/Slider.html
@@ -1,15 +1,16 @@
-<div xmlns="http://www.w3.org/1999/xhtml" lang="en"
-     xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
-    <f:layout name="Default"/>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en"
+      xmlns:f="http://typo3.org/ns/fluid/ViewHelpers"
+      data-namespace-typo3-fluid="true">
+<f:layout name="Default"/>
 
 
-    <f:section name="Main">
+<f:section name="Main">
 
-        <f:flashMessages/>
+    <f:flashMessages/>
 
-        <f:render section="Default" partial="{sliderSettings.renderer}" arguments="{_all}"/>
+    <f:render section="Default" partial="{sliderSettings.renderer}" arguments="{_all}"/>
 
-    </f:section>
+</f:section>
 
 
-</div>
+</html>
