--- a/Resources/Private/Partials/Item/Tinyslider.html
+++ b/Resources/Private/Partials/Item/Tinyslider.html
@@ -1,22 +1,21 @@
-<div xmlns="http://www.w3.org/1999/xhtml" lang="en"
-     xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en"
+      xmlns:f="http://typo3.org/ns/fluid/ViewHelpers"
+      data-namespace-typo3-fluid="true">
 
-    <f:section name="Default">
+<f:section name="Default">
 
-        <div>
+    <div>
+        <f:if condition="{item.foregroundMedia.0}">
+            <f:image image="{item.foregroundMedia.0}" class="img-fluid mb-4"/>
+        </f:if>
+    </div>
 
-            <f:if condition="{item.foregroundMedia.0}">
-                <f:image image="{item.foregroundMedia.0}" class="img-fluid mb-4"  />
-            </f:if>
+</f:section>
 
-        </div>
+<f:section name="Cards">
 
-    </f:section>
+    <f:render partial="Item/Layout/Card" arguments="{_all}"/>
 
-    <f:section name="Cards">
+</f:section>
 
-        <f:render partial="Item/Layout/Card" arguments="{_all}" />
-
-    </f:section>
-
-</div>
+</html>
