--- a/Resources/Private/Partials/Slick.html
+++ b/Resources/Private/Partials/Slick.html
@@ -1,19 +1,20 @@
-<div xmlns="http://www.w3.org/1999/xhtml" lang="en"
-     xmlns:f="http://typo3.org/ns/fluid/ViewHelpers"
-     xmlns:wsslider="http://typo3.org/ns/WapplerSystems/WsSlider/ViewHelpers">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en"
+      xmlns:f="http://typo3.org/ns/fluid/ViewHelpers"
+      xmlns:wsslider="http://typo3.org/ns/WapplerSystems/WsSlider/ViewHelpers"
+      data-namespace-typo3-fluid="true">
 
-    <f:section name="Default">
+<f:section name="Default">
 
-        <div id="wsslider-{data.uid}" class=" ">
-            <f:for each="{items}" as="item" iteration="iterator">
-                <f:render partial="Item/Slick" section="{sliderSettings.layout}"
-                          arguments="{item: item, settings: settings, iterator:iterator}"/>
-            </f:for>
-        </div>
+    <div id="wsslider-{data.uid}" class=" ">
+        <f:for each="{items}" as="item" iteration="iterator">
+            <f:render partial="Item/Slick" section="{sliderSettings.layout}"
+                      arguments="{item: item, settings: settings, iterator:iterator}"/>
+        </f:for>
+    </div>
 
 
-        <wsslider:addStartJavaScriptCode functionName="slick" useJQuery="true" selector="#wsslider-{data.uid}" name="wsslider-{data.uid}" defaultParameters="{sliderSettings.parameters}" />
+    <wsslider:addStartJavaScriptCode functionName="slick" useJQuery="true" selector="#wsslider-{data.uid}" name="wsslider-{data.uid}" defaultParameters="{sliderSettings.parameters}"/>
 
-    </f:section>
+</f:section>
 
-</div>
+</html>
