--- a/Resources/Private/Partials/Item/Bootstrap.html
+++ b/Resources/Private/Partials/Item/Bootstrap.html
@@ -10,7 +10,7 @@
             <f:image image="{item.foregroundMedia.0}"/>
 
         </f:if>
-        <div class="caption-wrapper caption-align-{item.text_position}">
+        <div class="caption-wrapper caption-align-{item.data.text_position}">
             <f:if condition="{item.data.title}||{item.data.description}">
                 <div class="caption-text">
                     <p class="caption-title">{item.data.title}</p>
