--- a/Resources/Private/Templates/Slider.html
+++ b/Resources/Private/Templates/Slider.html
@@ -6,7 +6,7 @@
 
 <f:section name="Main">
 
-    <f:flashMessages/>
+    <f:flashMessages queueIdentifier="core.template.flashMessages"/>
 
     <f:render section="Default" partial="{sliderSettings.renderer}" arguments="{_all}"/>
 
